vlib/v/checker/tests/incorrect_name_module.out
vlib/v/checker/tests/incorrect_name_module.vv:4:8: warning: module 'os' is imported but never used
    2 | 
    3 | import math as _
    4 | import os
      |        ~~
vlib/v/checker/tests/incorrect_name_module.vv:1:1: error: module name `_A` cannot start with `_`
    1 | module _A
      | ~~~~~~~~~
    2 | 
    3 | import math as _
vlib/v/checker/tests/incorrect_name_module.vv:1:1: error: module name `_A` cannot contain uppercase letters, use snake_case instead
    1 | module _A
      | ~~~~~~~~~
    2 | 
    3 | import math as _
vlib/v/checker/tests/incorrect_name_module.vv:1:1: error: project must include a `main` module or be a shared library (compile with `v -shared`)
    1 | module _A
      | ^
    2 | 
    3 | import math as _
